particles bug squashed

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -534,6 +534,7 @@ footer.sticky-bottom {
   width: 80%;
   margin-left: auto;
   margin-right: auto;
+  z-index: 100;
 
   a {
     text-decoration: none;
