--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -4,6 +4,7 @@
 
 body {
   padding-bottom: 70px;
+  margin: 0;
   color: var(--global-text-color);
   background-color: var(--global-bg-color);
 
@@ -26,9 +27,9 @@ html[data-theme='light'] {
   #particles-js {
     margin: 0; 
     padding: 0; 
-    position: absolute;
-    width: 100%;
-    height: 100%;
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
     background:  #fdfdfd;
     display: flex;
     z-index: -100;
@@ -39,9 +40,9 @@ html[data-theme='dark'] {
   #particles-js {
     margin: 0; 
     padding: 0; 
-    position: absolute;
-    width: 100%;
-    height: 100%;
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
     background:  #{$grey-color-dark};
     display: flex;
     z-index: -100;
